add delete api
